# University-Projects

./: README.md
Semester 1/Fundamentals of Programming/: README
Semester 1/Fundamentals of Programming/Assignment 11/: README.md
Semester 1/Fundamentals of Programming/Assignment 2/: program.py
Semester 1/Fundamentals of Programming/Assignment 3-4/: README.md
Semester 1/Fundamentals of Programming/Assignment 6-10/: README.md
Semester 1/Fundamentals of Programming/Assignment 6-9/: README.md
Semester 1/Fundamentals of Programming/Assignment5/: README.md
Semester 1/Fundamentals of Programming/Practical exam/: Question.py  Test.py  controller.py  main.py  repository.py  test.txt  ui.py
Semester 2/Data structures and algorithms/Assignment 2/SortedList/: CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h
Semester 2/Data structures and algorithms/Assignment 3/SortedIteratedList/: CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  SortedIteratedList.cpp  SortedIteratedList.h
Semester 2/Data structures and algorithms/Assignment 5/BST_matrix/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  MatrixIterator.cpp  MatrixIterator.h
Semester 2/Graph Algorithms/: README.md
Semester 2/Graph Algorithms/Graph/: dag.txt  main.py  random_graph1.txt  ug1.txt  ug2.txt
Semester 2/Object Oriented Programming/Assignment 1/: README.md  main.c
Semester 2/Object Oriented Programming/Assignment 2-3/: README.md
Semester 2/Object Oriented Programming/Practical Exam/: README.md
(+374 files in other folders)
